Align the buttons correctly.

--- a/src/components/pages/style.scss
+++ b/src/components/pages/style.scss
@@ -99,7 +99,8 @@
 		margin: 0 0 0 5px;
 	}
 
-	.pages__page-patching-button {
+	.pages__page-button-group {
 		margin-left: auto;
+		display: inline-flex;
 	}
 }
